@@ -1,16 +1,15 @@
 package com.mt1006.mocap.command;
 
-import com.google.common.collect.ImmutableList;
 import com.mojang.brigadier.context.CommandContextBuilder;
 import com.mojang.brigadier.context.StringRange;
 import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
 import com.mojang.datafixers.util.Pair;
+import com.mt1006.mocap.command.io.CommandOutput;
 import com.mt1006.mocap.events.PlayerConnectionEvent;
 import com.mt1006.mocap.mocap.files.RecordingFiles;
 import com.mt1006.mocap.mocap.files.SceneFiles;
 import com.mt1006.mocap.network.MocapPacketS2C;
-import net.minecraft.server.MinecraftServer;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.HashSet;
@@ -38,41 +37,45 @@ public class InputArgument
 
 		String subcommand = String.format("%s/%s", subcommand1, subcommand2);
 
-		List<Pair<Integer, Integer>> args = ImmutableList.of();
+		List<Pair<Integer, Integer>> args = List.of();
 
 		switch (subcommand)
 		{
-			case "playing/start":
-				args = ImmutableList.of(new Pair<>(3, PLAYABLE));
+			case "recording/stop":
+				args = List.of(Pair.of(3, CURRENTLY_RECORDED));
+				break;
+
+			case "playback/start":
+				args = List.of(Pair.of(3, PLAYABLE));
 				break;
 
 			case "recordings/copy":
 			case "recordings/rename":
 			case "recordings/remove":
 			case "recordings/info":
-				args = ImmutableList.of(new Pair<>(3, RECORDINGS));
+				args = List.of(Pair.of(3, RECORDINGS));
 				break;
 
 			case "scenes/copy":
 			case "scenes/rename":
 			case "scenes/remove":
-			case "scenes/removeFrom":
-			case "scenes/elementInfo":
-			case "scenes/listElements":
+			case "scenes/remove_from":
+			case "scenes/list": //TODO: test!
 			case "scenes/info":
-				args = ImmutableList.of(new Pair<>(3, SCENES));
+				args = List.of(Pair.of(3, SCENES));
 				break;
 
-			case "scenes/addTo":
-				args = ImmutableList.of(new Pair<>(3, SCENES), new Pair<>(4, PLAYABLE));
+			case "scenes/add_to":
+				args = List.of(Pair.of(3, SCENES), Pair.of(4, PLAYABLE));
 				break;
 		}
 
 		if (subcommand.equals("scenes/modify"))
 		{
 			String paramToModify = CommandUtils.getNode(ctx, 5);
-			if (paramToModify == null || !paramToModify.equals("subsceneName")) { args = ImmutableList.of(new Pair<>(3, SCENES)); }
-			else { args = ImmutableList.of(new Pair<>(3, SCENES), new Pair<>(6, PLAYABLE)); }
+			args = (paramToModify != null && !paramToModify.equals("subscene_name"))
+					? List.of(Pair.of(3, SCENES), Pair.of(6, PLAYABLE))
+					: List.of(Pair.of(3, SCENES));
 		}
 
 		int suggestionFlags = 0;
@@ -107,39 +110,38 @@ public class InputArgument
 
 		for (String input : clientInputSet)
 		{
-			int type;
-			switch (input.charAt(0))
+			int type = switch (input.charAt(0))
 			{
-				case '.': type = SCENES; break;
-				case '#': type = CURRENTLY_RECORDED; break;
-				default: type = RECORDINGS; break;
+				case '.' -> SCENES;
+				case '#' -> CURRENTLY_RECORDED;
+				default -> RECORDINGS;
 			};
 			if ((suggestionFlags & type) != 0 && input.startsWith(prefix)) { builder.suggest(input); }
 		}
 		return builder.buildFuture();
 	}
 
-	public static void initServerInputSet(MinecraftServer server)
+	public static void initServerInputSet()
 	{
 		serverInputSet.clear();
 
-		List<String> recordingList = RecordingFiles.list(server, CommandOutput.DUMMY);
+		List<String> recordingList = RecordingFiles.list(CommandOutput.DUMMY);
 		if (recordingList != null) { serverInputSet.addAll(recordingList); }
 
-		List<String> sceneList = SceneFiles.list(server, CommandOutput.DUMMY);
+		List<String> sceneList = SceneFiles.list(CommandOutput.DUMMY);
 		if (sceneList != null) { serverInputSet.addAll(sceneList); }
 	}
 
 	public static void addServerInput(String name)
 	{
 		serverInputSet.add(name);
-		PlayerConnectionEvent.players.forEach((player) -> MocapPacketS2C.sendInputSuggestionsAdd(player, ImmutableList.of(name)));
+		PlayerConnectionEvent.players.forEach((player) -> MocapPacketS2C.sendInputSuggestionsAdd(player, List.of(name)));
 	}
 
 	public static void removeServerInput(String name)
 	{
 		serverInputSet.remove(name);
-		PlayerConnectionEvent.players.forEach((player) -> MocapPacketS2C.sendInputSuggestionsRemove(player, ImmutableList.of(name)));
+		PlayerConnectionEvent.players.forEach((player) -> MocapPacketS2C.sendInputSuggestionsRemove(player, List.of(name)));
 	}
 
 	private static @Nullable StringRange getStringRange(CommandContextBuilder<?> ctx, int pos)
